course1 w3 neural network 구현 코드 추가

--- a/coursera/C1_W2_Logistic_Regression_as_a_Neural_Network/Simple Neural Network with Logistic Regression.ipynb
+++ b/coursera/C1_W2_Logistic_Regression_as_a_Neural_Network/Simple Neural Network with Logistic Regression.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "316e22a4",
    "metadata": {
@@ -63,7 +62,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0cb9a32c",
    "metadata": {},
@@ -206,7 +204,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a64b6bf9",
    "metadata": {},
@@ -329,7 +326,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3ec73222",
    "metadata": {},
@@ -354,7 +350,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e8616801",
    "metadata": {},
@@ -418,7 +413,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b8d3f546",
    "metadata": {},
@@ -499,7 +493,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ced37e38",
    "metadata": {},
@@ -608,7 +601,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "17c46f87",
    "metadata": {},
@@ -715,7 +707,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "89b7c49f",
    "metadata": {},
@@ -792,7 +783,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c66b4153",
    "metadata": {},
@@ -1053,7 +1043,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "236cdf76",
    "metadata": {},
@@ -1178,7 +1167,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b2ccca48",
    "metadata": {
@@ -1204,7 +1192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_py37",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
